--- a/app/styles/crate.scss
+++ b/app/styles/crate.scss
@@ -2,6 +2,9 @@
     width: 100%;
     padding: 20px;
     background-color: $main-bg-dark;
+    @media only screen and (prefers-color-scheme: dark) {
+        background-color: #222;
+    }
     margin-bottom: 20px;
     @include border-radius(5px);
     @include display-flex;
@@ -56,6 +59,17 @@
     margin: 0 15px;
 }
 
+@media only screen and (prefers-color-scheme: dark) {
+    .crate-search {
+        background-color: #111;
+        color: #eee;
+    }
+
+    .crate-search svg {
+        filter: invert(100%);
+    }
+}
+
 #selection {
     width: 100%;
     @include display-flex;
@@ -91,6 +105,10 @@
 .crate-toml-copy {
     button, button:active {
         background-color: #FFFFFF;
+        @media only screen and (prefers-color-scheme: dark) {
+            background-color: #111;
+            color: #eee;
+        }
         border: none;
         cursor: pointer;
         position: relative;
@@ -116,7 +134,13 @@
     @include justify-content(space-between);
     margin-bottom: 25px;
 
-    .cur, .total { color: $main-color; font-weight: bold; }
+    .cur, .total {
+        color: $main-color;
+        font-weight: bold;
+        @media only screen and (prefers-color-scheme: dark) {
+            color: #fff;
+        }
+    }
 
     .dropdown-container { font-size: 85%; }
     a.dropdown {
@@ -124,11 +148,25 @@
         padding: 10px;
         display: inline-block;
         @include border-radius(5px);
+        @media only screen and (prefers-color-scheme: dark) {
+            background-color: #222;
+            color: #eee;
+        }
+    }
+}
+
+@media only screen and (prefers-color-scheme: dark) {
+    #crates > div {
+        border-bottom: 0.25rem solid #666;
     }
 }
 
 .white-rows {
     background-color: white;
+    @media only screen and (prefers-color-scheme: dark) {
+        background-color: #111;
+        color: #eee;
+    }
     padding: 0 20px;
     margin-bottom: 20px;
     @include display-flex;
@@ -143,6 +181,11 @@
         @include flex-wrap(wrap);
 
         &:last-of-type { border: none; }
+    }
+}
+@media only screen and (prefers-color-scheme: dark) {
+    .white-rows svg {
+        filter: invert(100%);
     }
 }
 
@@ -185,6 +228,9 @@
     }
     .info a {
         color: $main-color;
+        @media only screen and (prefers-color-scheme: dark) {
+            color: #fff;
+        }
         font-weight: bold;
         text-decoration: none;
         font-size: 120%;
@@ -196,6 +242,9 @@
     .stats {
         width: 25%;
         color: $main-color-light;
+        @media only screen and (prefers-color-scheme: dark) {
+            color: #bbb;
+        }
     }
     .downloads {
         @include display-flex;
@@ -265,11 +314,32 @@
 
     a {
         color: $main-color-light;
+        @media only screen and (prefers-color-scheme: dark) {
+            background-color: #111;
+        }
         text-decoration: none;
         padding: 5px 6px;
     }
-    a:hover { background-color: $main-bg-dark; }
-    a.active { background-color: $main-bg-dark; }
+    a:hover {
+        background-color: $main-bg-dark;
+        @media only screen and (prefers-color-scheme: dark) {
+            background-color: #111;
+            font-weight: bolder;
+        }
+    }
+    a.active {
+        background-color: $main-bg-dark;
+        @media only screen and (prefers-color-scheme: dark) {
+            background-color: #111;
+        }
+    }
+
+    @media only screen and (prefers-color-scheme: dark) {
+        svg:hover {
+            filter: invert(100%)
+                    drop-shadow(0 0 0.5rem rgba(255, 255, 255, 0.1875));
+        }
+    }
 }
 
 .crate-info {
@@ -277,6 +347,9 @@
     @include flex-direction(column);
     padding-bottom: 20px;
     border-bottom: 5px solid $gray-border;
+    @media only screen and (prefers-color-scheme: dark) {
+        border-bottom: 0.25rem solid #666;
+    }
     margin-bottom: 20px;
 
     @media only screen and (min-width: 890px) {
@@ -337,6 +410,10 @@
         font-size: 120%;
         padding: 10px;
         background-color: darken($main-bg-dark, 8%);
+        @media only screen and (prefers-color-scheme: dark) {
+            background-color: #222;
+            color: #eee;
+        }
         @include display-flex;
 
         .action {
@@ -355,6 +432,11 @@
             .action { @include flex(2); display: block; }
             code { @include flex(8); }
         }
+        @media only screen and (prefers-color-scheme: dark) {
+            svg {
+                filter: invert(100%);
+            }
+        }
         .crate-toml-copy {
             display: flex;
 
@@ -366,6 +448,10 @@
             }
             button:hover {
                 background: #edebdd;
+                @media only screen and (prefers-color-scheme: dark) {
+                    background: #090909;
+                    color: #eee;
+                }
             }
 
             .copy-notification {
@@ -399,6 +485,10 @@
             code {
                 background-color: #fff;
                 padding: 0 2px;
+                @media only screen and (prefers-color-scheme: dark) {
+                    background-color: #222;
+                    border-radius: 4px;
+                }
             }
         }
 
@@ -493,6 +583,12 @@
     .graph-data {
         width: 100%;
         height: 500px;
+        @media only screen and (prefers-color-scheme: dark) {
+            color: #eee;
+            svg {
+                filter: invert(100%);
+            }
+        }
     }
 }
 
@@ -500,6 +596,9 @@
     @include display-flex;
     padding-bottom: 20px;
     border-bottom: 5px solid $gray-border;
+    @media only screen and (prefers-color-scheme: dark) {
+        border-bottom: 0.25rem solid #666;
+    }
     margin-bottom: 30px;
 
     h3 { margin-bottom: 5px; }
