Fix a deprecation warning during `ember build`
There is no usage of `sendAction` in the component, so I believe no futher changes are needed there.

    DEPRECATION: Passing actions to components as strings (like `<Input @enter="saveToken" />`) is deprecated.
    Please use closure actions instead (`<Input @enter={{action "saveToken"}} />`).
    ('cargo/templates/components/api-token-row.hbs' @ L4:C6)  [deprecation id: ember-component.send-action]
    See https://emberjs.com/deprecations/v3.x#toc_ember-component-send-action for more details.

--- a/app/templates/components/api-token-row.hbs
+++ b/app/templates/components/api-token-row.hbs
@@ -7,7 +7,7 @@
         @disabled={{this.api_token.isSaving}}
         @value={{this.api_token.name}}
         @autofocus="autofocus"
-        @enter="saveToken"
+        @enter={{action "saveToken"}}
         data-test-focused-input
       />
     {{else}}
