Use `@` prefix for arguments in template-only components

--- a/app/templates/components/category-list.hbs
+++ b/app/templates/components/category-list.hbs
@@ -1,5 +1,5 @@
 <ul>
-  {{#each this.categories as |category|}}
+  {{#each @categories as |category|}}
     <li>
       <LinkTo @route="category" @model={{category.slug}} class="name">
         <span>{{ category.category }} ({{ format-num category.crates_cnt }})</span>
