--- a/app/templates/components/crate-list-name-only.hbs
+++ b/app/templates/components/crate-list-name-only.hbs
@@ -1,5 +1,5 @@
 <ol>
-  {{#each this.crates as |crate index|}}
+  {{#each @crates as |crate index|}}
     <li>
       <LinkTo @route="crate" @model={{crate.id}} class="name" data-test-crate-link={{index}}>
         <span>{{ crate.name }}</span>
