--- a/app/templates/components/keyword-list.hbs
+++ b/app/templates/components/keyword-list.hbs
@@ -1,5 +1,5 @@
 <ul>
-  {{#each this.keywords as |keyword|}}
+  {{#each @keywords as |keyword|}}
     <li>
       <LinkTo @route="keyword" @model={{keyword}} class="name">
         <span>{{ keyword.id }} ({{ format-num keyword.crates_cnt }})</span>
