Reword the noscript message
After having FastBoot, JavaScript would not be "required" but still
necessary for full functionality of crates.io

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -41,6 +41,11 @@ body > div {
     }
 }
 
+#noscript {
+  color: white;
+  padding: 10px 0;
+}
+
 #main {
   @include display-flex;
   @include flex-direction(column);
