--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -1,3 +1,14 @@
+@mixin vertical-gradient($start, $end) {
+    background: $end;
+    background: -moz-linear-gradient(top, $start 0%, $end 100%);
+    background: -webkit-gradient(linear, left top, left bottom,
+        color-stop(0%,$start),
+        color-stop(100%,$end));
+    background: -webkit-linear-gradient(top, $start 0%,$end 100%);
+    background: -ms-linear-gradient(top, $start 0%,$end 100%);
+    background: linear-gradient(to bottom, $start 0%,$end 100%);
+}
+
 @mixin button($start, $end) {
     $start_dark: darken($start, 5%);
     $end_dark: darken($end, 5%);
