Move `#category-slugs` style to corresponding `category-slugs.scss` file

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,6 +10,7 @@ $link-color: rgb(0, 172, 91);
 
 @import "home";
 @import "catch-all";
+@import "category-slugs";
 @import "crate";
 @import "me";
 
