Move dashboard styles to corresponding `dashboard.scss` file

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -12,6 +12,7 @@ $link-color: rgb(0, 172, 91);
 @import "catch-all";
 @import "category-slugs";
 @import "crate";
+@import "dashboard";
 @import "me";
 
 * {
