FlashMessage: Move `flash-messages` service dependency out of the component
... to make this a purely presentational component

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -127,7 +127,7 @@
   </form>
 
   <main id="main" class='inner-content'>
-    <FlashMessage />
+    <FlashMessage @message={{this.flashMessages.message}} />
 
     {{outlet}}
   </main>
