catch-all: Reuse `FlashMessage` component

--- a/app/templates/catch-all.hbs
+++ b/app/templates/catch-all.hbs
@@ -1,4 +1,4 @@
-<p id='flash' class='shown'>Oops, that route doesn't exist!</p>
+<FlashMessage @message="Oops, that route doesn't exist!" />
 
 <p id='p404'>
   Perhaps a search of the site may help?
