Move `index` route styles to dedicated file

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -18,6 +18,7 @@ $link-color: rgb(0, 172, 91);
 @import "crate/version";
 @import "components/flash-message";
 @import "dashboard";
+@import "index";
 @import "loading";
 @import "me";
 
