Move `search` route styles to dedicated file

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -21,6 +21,7 @@ $link-color: rgb(0, 172, 91);
 @import "index";
 @import "loading";
 @import "me";
+@import "search";
 
 * {
   box-sizing: border-box;
