--- a/app/templates/crate/reverse-dependencies.hbs
+++ b/app/templates/crate/reverse-dependencies.hbs
@@ -27,16 +27,4 @@
   {{/each}}
 </div>
 
-<div class='pagination'>
-  <LinkTo @query={{hash page=this.prevPage}} class="prev">
-    {{svg-jar "left-pag"}}
-  </LinkTo>
-  {{#each this.pages as |page|}}
-    <LinkTo @query={{hash page=page}}>
-      {{ page }}
-    </LinkTo>
-  {{/each}}
-  <LinkTo @query={{hash page=this.nextPage}} class="next">
-    {{svg-jar "right-pag"}}
-  </LinkTo>
-</div>
+<Pagination @pages={{this.pages}} @prevPage={{this.prevPage}} @nextPage={{this.nextPage}} />
