--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -76,20 +76,4 @@
   {{/each}}
 </div>
 
-<nav class='pagination' aria-label="Pagination navigation">
-  <LinkTo @query={{hash page=this.prevPage}} class="prev" @rel="prev" @title="previous page" data-test-pagination-prev>
-    {{svg-jar "left-pag"}}
-  </LinkTo>
-  <ol>
-    {{#each this.pages as |page|}}
-      <li>
-        <LinkTo @query={{hash page=page}} @title={{concat "Go to page " page}}>
-          {{ page }}
-        </LinkTo>
-      </li>
-    {{/each}}
-  </ol>
-  <LinkTo @query={{hash page=this.nextPage}} class="next" @rel="next" @title="next page" data-test-pagination-next>
-    {{svg-jar "right-pag"}}
-  </LinkTo>
-</nav>
+<Pagination @pages={{this.pages}} @prevPage={{this.prevPage}} @nextPage={{this.nextPage}} />
