--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -9,7 +9,7 @@
     <h2>for '{{ this.q }}'</h2>
   {{/if}}
 
-  {{#if this.dataTask.isRunning}}<img src="/assets/ajax-loader.gif" class="loading-spinner">{{/if}}
+  {{#if this.dataTask.isRunning}}<img src="/assets/ajax-loader.gif" local-class="loading-spinner">{{/if}}
 </div>
 
 {{#if this.firstResultPending}}
