loading: Use CSS modules

--- a/app/styles/loading.module.scss
+++ b/app/styles/loading.module.scss
@@ -1,9 +1,10 @@
-div.loading-state {
+.loading-state {
     text-align: center;
     height: 65vh;
     padding-top: 30vh;
 }
-span.loading {
+
+.loading {
     display: inline-block;
     width: 16px;
     height: 16px;
