--- a/app/styles/index.module.scss
+++ b/app/styles/index.module.scss
@@ -1,4 +1,4 @@
-#title-header {
+.title-header {
     text-align: center;
     border-bottom: 5px solid $gray-border;
     padding-bottom: 40px;
@@ -19,13 +19,13 @@
     }
 }
 
-#blurb {
+.blurb {
     margin: 30px 0 40px 0;
     display: flex;
 
-    #intro { flex: 6; line-height: 25px; padding: 10px;}
+    .intro { flex: 6; line-height: 25px; padding: 10px;}
 
-    #stats {
+    .stats {
         flex: 4;
         display: flex;
         flex-direction: column;
@@ -47,7 +47,7 @@
 
     @media only screen and (max-width: 530px) {
         flex-direction: column;
-        #stats {
+        .stats {
             border: none;
             margin: auto;
         }
@@ -57,19 +57,19 @@
     }
 }
 
-#home-crates {
+.lists {
     flex-wrap: wrap;
     justify-content: left;
 
     > section {
-      margin: 0;
-      padding: 0 15px;
-      width: 33.33%;
-      @media only screen and (max-width: 750px) {
-        width: 50%;
-      }
-      @media only screen and (max-width: 550px) {
-        width: 100%;
-      }
+        margin: 0;
+        padding: 0 15px;
+        width: 33.33%;
+        @media only screen and (max-width: 750px) {
+            width: 50%;
+        }
+        @media only screen and (max-width: 550px) {
+            width: 100%;
+        }
     }
 }
