--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,7 @@
-<div id='title-header'>
+<div local-class='title-header'>
   <h1>The Rust community&rsquo;s crate registry</h1>
 
-  <div class='links'>
+  <div local-class='links'>
     <a href="https://doc.rust-lang.org/cargo/getting-started/installation.html" class='yellow-button' data-test-install-cargo-link>
       {{svg-jar "button-download"}}
       Install Cargo
@@ -14,28 +14,28 @@
   </div>
 </div>
 
-<div id='blurb'>
-  <div id='intro'>
+<div local-class='blurb'>
+  <div local-class='intro'>
     Instantly publish your crates and install them. Use the API to
     interact and find out more information about available crates. Become
     a contributor and enhance the site with your work.
   </div>
 
-  <div id='stats'>
-    <div class='downloads'>
+  <div local-class='stats'>
+    <div local-class='downloads'>
       {{svg-jar "download"}}
-      <span class='num' data-test-total-downloads>{{if this.hasData (format-num this.model.num_downloads) "---,---,---"}}</span>
+      <span local-class='num' data-test-total-downloads>{{if this.hasData (format-num this.model.num_downloads) "---,---,---"}}</span>
       <span class='desc small'>Downloads</span>
     </div>
-    <div class='crates'>
+    <div local-class='crates'>
       {{svg-jar "crate"}}
-      <span class='num' data-test-total-crates>{{if this.hasData (format-num this.model.num_crates) "---,---"}}</span>
+      <span local-class='num' data-test-total-crates>{{if this.hasData (format-num this.model.num_crates) "---,---"}}</span>
       <span class='desc small'>Crates in stock</span>
     </div>
   </div>
 </div>
 
-<div id='home-crates' class='crate-lists'>
+<div local-class='lists' class='crate-lists'>
   <section id='new-crates' data-test-new-crates aria-busy="{{this.dataTask.isRunning}}">
     <h2>New Crates</h2>
     <CrateListNewest @crates={{this.model.new_crates}} />
