catch-all: Use CSS modules

--- a/app/templates/catch-all.hbs
+++ b/app/templates/catch-all.hbs
@@ -1,10 +1,11 @@
 <FlashMessage @message="Oops, that route doesn't exist!" />
 
-<p id='p404'>
+<p local-class='p404'>
   Perhaps a search of the site may help?
 
   <Input
     @type="text"
+    local-class="search-field"
     class="search"
     placeholder="Search"
     @value={{this.search}}
