--- a/app/templates/crate/versions.hbs
+++ b/app/templates/crate/versions.hbs
@@ -10,7 +10,7 @@
   </span>
 </div>
 
-<div id='crate-all-versions' class='white-rows'>
+<div local-class='list' class='white-rows'>
   {{#each this.model.versions as |version|}}
     <div class='row'>
       <div>
